--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Covid19 - India</title>
-    <meta name="description" content="India Covid 19 State and District wise Tracker">
+    <meta name="description" content="India Covid 19 State and District wise Tracker.">
     <meta name="author" content="Ajaykumar Prathap">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1">
     <meta property="og:title" content="India Covid 19 State and District wise Tracker">
